--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <div id="overlay"></div>
 
     <div class="modal" id="modal">
-        <div class="modal-content">
+        <div class="modal-content" id="modalContent">
             <div class="modal-header">
                 <div style="display: flex; align-items: center; gap: 5px;">
                     <img src="./assets/1f60e.png" alt="Emoji">
