--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                         <h2 for="oneYear">UM ANO</h2>
                         <span>67% OFF</span>
                     </div>
-                    <h2>R$ 179,90</h2>
+                    <h2 class="price__line">R$ 179,90</h2>
                 </div>
                 <div class="container__modal-line">
                     <div style="display: flex; gap: 10px; align-items: center;">
