--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                         <h2>TRÊS MESES</h2>
                         <span>48% OFF</span>
                     </div>
-                    <h2>R$ 69,90</h2>
+                    <h2 class="price__line">R$ 69,90</h2>
                 </div>
                 <div class="container__modal-line">
                     <div style="display: flex; gap: 10px; align-items: center;">
@@ -123,7 +123,7 @@
                             onchange="toggleDisable(this)">
                         <h2>UM MÊS</h2>
                     </div>
-                    <h2>R$ 49,90</h2>
+                    <h2 class="price__line">R$ 49,90</h2>
                 </div>
             </div>
             <div style="width: 100%; background-color: #393939; height: 2px; opacity: 0.6; border-radius: 10px;"></div>
@@ -147,9 +147,10 @@
             </p>
 
         </div>
-        <button id="obtenhaAgoraButton" class="modal__botao"><a id="linkObtenha"
-                href="https://pay.kirvano.com/db68dad7-4561-4054-999f-e2ea72740b03" target="_blank">OBTENHA
-                AGORA!</a></button>
+        <button id="obtenhaAgoraButton" class="modal__botao">
+            <a id="linkObtenha" href="https://pay.kirvano.com/db68dad7-4561-4054-999f-e2ea72740b03" target="_blank">
+                OBTENHA AGORA!</a>
+        </button>
         <img src="assets/SELO.svg" alt="Selo" style="width: 80px; position: absolute; top: 93%; left: 92%;" id="selo">
     </div>
 
