--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             </div>
             <div style="width: 100%; background-color: #393939; height: 2px; opacity: 0.6; border-radius: 10px;"></div>
             <div class="container__prices-modal">
-                <div class="container__modal-line">
+                <div class="container__modal-line selecionado" id="oneYearDiv" onclick="selectOption('oneYear')">
                     <div style="display: flex; gap: 10px; align-items: center;">
                         <input id="oneYear" type="checkbox" onclick="uncheckOthers('oneYear') " checked
                             onchange="toggleDisable(this)">
@@ -108,7 +108,7 @@
                     </div>
                     <h2 class="price__line">R$ 179,90</h2>
                 </div>
-                <div class="container__modal-line">
+                <div class="container__modal-line" id="threeMounthsDiv" onclick="selectOption('threeMounths')">
                     <div style="display: flex; gap: 10px; align-items: center;">
                         <input id="threeMounths" type="checkbox" onclick="uncheckOthers('threeMounths')"
                             onchange="toggleDisable(this)">
@@ -117,7 +117,7 @@
                     </div>
                     <h2 class="price__line">R$ 69,90</h2>
                 </div>
-                <div class="container__modal-line">
+                <div class="container__modal-line" id="oneMounthDiv" onclick="uncheckOthers('oneMounth')">
                     <div style="display: flex; gap: 10px; align-items: center;">
                         <input id="oneMounth" type="checkbox" onclick="uncheckOthers('oneMounth')"
                             onchange="toggleDisable(this)">
@@ -132,7 +132,7 @@
                 <div class="modal-detalhes">
                     <div class="detalhes-emoji">
                         <img src="./assets/RELOGINHO.png" alt="Relógio" style="width: 14px;">
-                        <span>Um Ano</span>
+                        <span id="relogioText">Um Ano</span>
                     </div>
                     <div class="detalhes-precos">
                         <h2 id="price" style="background-color: #E1C111; text-decoration: line-through;">R$ 539,99</h2>
