--- a/index.html
+++ b/index.html
@@ -77,8 +77,7 @@
     </div>
 
     <div class="container__button-after-hero flex justify-center">
-        <button id="openModalBtn"
-            class="after-hero__botao">OBTENHA
+        <button id="openModalBtn" class="after-hero__botao">OBTENHA
             AGORA!</button>
     </div>
 
@@ -289,8 +288,7 @@
     </div>
 
     <!--INTELIGÊNCIA ARTIFICIAL-->
-    <div
-        class="relative w-full flex flex-col justify-start items-start gap-y-[50px] pt-[50px] overflow-hidden">
+    <div class="relative w-full flex flex-col justify-start items-start gap-y-[50px] pt-[50px] overflow-hidden">
         <div class="absolute w-full flex justify-end bottom-[0px] right-[30px]">
             <div class="w-[1px] h-[1px] pointer-events-none" id="boxShadow1">
             </div>
