--- a/index.html
+++ b/index.html
@@ -11,21 +11,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/material-ui/4.12.4/index.js"
         integrity="sha512-wEnX3bNd/CdyrOFR0KIGlHihK/w9x3/It8Vc18aymEF/F/f1q0Mq8T+GSxF1wYUACLEGECapuIYQdQlKY1LBJw=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script>
-        !function (f, b, e, v, n, t, s) {
-            if (f.fbq) return; n = f.fbq = function () {
-                n.callMethod ?
-                    n.callMethod.apply(n, arguments) : n.queue.push(arguments)
-            };
-            if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
-            n.queue = []; t = b.createElement(e); t.async = !0;
-            t.src = v; s = b.getElementsByTagName(e)[0];
-            s.parentNode.insertBefore(t, s)
-        }(window, document, 'script',
-            'https://connect.facebook.net/en_US/fbevents.js');
-        fbq('init', '1701617907332067');
-        fbq('track', 'PageView');
-    </script>
     <noscript><img height="1" width="1" style="display:none"
             src="https://www.facebook.com/tr?id=1701617907332067&ev=PageView&noscript=1" /></noscript>
     <script src="./script.js" defer></script>
@@ -34,7 +19,7 @@
 <body>
 
     <!--Potencialize Seu Desempenho-->
-    <div id="BUY_SECTION" class="relative w-full min-h-[800px]"
+    <div  class="relative w-full min-h-[800px]"
         style="background-image: url(&quot;https://i.imgur.com/3gR8GpX.png&quot;); background-size: contain; background-position: left bottom; background-repeat: no-repeat;">
         <div
             class="absolute w-full h-full flex flex-wrap flex-row justify-center items-center gap-x-[40px] gap-y-[40px] px-[40px] py-[80px] overflow-hidden">
@@ -99,8 +84,8 @@
             <h1>por 6x R$6,31</h1>
             <span>ou R$37,90 à vista</span>
             <div class="container__button-after-hero flex justify-center">
-                <a href="https://pay.kirvano.com/8f37f047-8a92-422a-85f6-85436d7f5c45"><button class="after-hero__botao">OBTENHA
-                    AGORA!</button></a>
+                <button class="after-hero__botao">OBTENHA
+                    AGORA!</button>
             </div>
         </div>
     </div>
@@ -816,7 +801,6 @@
             </ul>
         </div>
         <div class="flex justify-center align-center mt-10">
-            <a href="https://pay.kirvano.com/8f37f047-8a92-422a-85f6-85436d7f5c45">
             <button id="secondButton"
                 class="border-none font-extrabold p-4 rounded-sm w-[360px] h-[50px] text-center text-[#FAFAFA] bg-[#BD162C] hover:bg-[#991526]">OBTENHA
                 AGORA!</button>
