--- a/index.html
+++ b/index.html
@@ -891,8 +891,8 @@
             <div class="w-full" style="height: 1px; background-color: rgba(255, 255, 255, 0.1);"></div>
         </div>
         <div class="w-full flex justify-center items-center">
-            <p class="text-[14px] text-[#BABABA] text-center font-[400]">🚀 ©FiveFPS, Brasil, SP -
-                Otimize seu sistema operacional | CNPJ: 46.397.059/0001-66</p>
+            <p class="text-[14px] text-[#BABABA] text-center font-[400]">
+                Otimize seu sistema operacional </p>
         </div>
     </div>
 
